# agent_setup

codex_agent/legacy/shared_core_prototype/: .gitignore  README.md  pyproject.toml
codex_agent/legacy/shared_core_prototype/configs/: global.yaml  models.yaml
codex_agent/legacy/shared_core_prototype/docs/: architectures.md  experiment_protocol.md  metrics.md
codex_agent/legacy/shared_core_prototype/scripts/: compare_runs.py  run_experiment.py  summarize_report.py
codex_agent/legacy/shared_core_prototype/src/codex_agent/: __init__.py
codex_agent/legacy/shared_core_prototype/src/codex_agent/architectures/: __init__.py  base.py
codex_agent/legacy/shared_core_prototype/src/codex_agent/architectures/long_horizon/: README.md  __init__.py  adapter.py  config.yaml
codex_agent/legacy/shared_core_prototype/src/codex_agent/architectures/manager_workers/: README.md  __init__.py  adapter.py  config.yaml
codex_agent/legacy/shared_core_prototype/src/codex_agent/architectures/reviewer_optimizer/: README.md  __init__.py  adapter.py  config.yaml
codex_agent/legacy/shared_core_prototype/src/codex_agent/architectures/scaffolded_single/: README.md  __init__.py  adapter.py  config.yaml
codex_agent/legacy/shared_core_prototype/src/codex_agent/architectures/single_loop/: README.md  __init__.py  adapter.py  config.yaml
codex_agent/legacy/shared_core_prototype/src/codex_agent/architectures/workflow_pipeline/: README.md  (+3 more)
codex_agent/legacy/shared_core_prototype/src/codex_agent/core/: __init__.py  evaluator.py  registry.py  result.py  runner.py  scenario.py  storage.py
(+272 files in other folders)
